# aws-okta-processor

./: .editorconfig  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  MANIFEST.in  Makefile  PUBLISHING.md  Pipfile  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: action.yml  build.yml
aws_okta_processor/: __init__.py  __main__.py  cli.py
aws_okta_processor/commands/: __init__.py  authenticate.py  base.py  get_roles.py  getroles.py
aws_okta_processor/core/: fetcher.py  okta.py  prompt.py  saml.py  tty.py
src/aws_okta_processor/: cli.py
src/aws_okta_processor/commands/: __init__.py  authenticate.py  base.py  get_roles.py
src/aws_okta_processor/core/: fetcher.py  okta.py  print_tty.py  saml.py
tests/: APPLICATIONS_RESPONSE  AUTH_MFA_MAIL_ISSUE_CHALLENGE_RESPONSE  AUTH_MFA_MAIL_RESPONSE  AUTH_MFA_MULTIPLE_RESPONSE  AUTH_MFA_RESPONSE  AUTH_MFA_TOTP_RESPONSE  AUTH_MFA_YUBICO_HARDWARE_RESPONSE  AUTH_TOKEN_RESPONSE  MFA_WAITING_RESPONSE  SAML_RESPONSE  SESSION_RESPONSE  SIGN_IN_RESPONSE  SIGN_IN_RESPONSE_V2  __init__.py  test_base.py  test_cli.py
tests/commands/: test_authenticate.py  test_base.py  test_get_roles.py  test_getroles.py
tests/core/: test_fetcher.py  test_okta.py  test_print_tty.py  test_prompt.py  test_saml.py  test_tty.py
tests/fixtures/: .awsoktaprocessor
tests/fixtures/userhome/: .awsoktaprocessor
