[metadata]
name = aws-okta-processor
version = attr: aws_okta_processor.__version__
description = Resource for fetching AWS Role credentials from Okta.
author = Cloud Platform Solutions
author_email = cp-solutions@godaddy.com
url = https://github.com/godaddy/aws-okta-processor
license = MIT License
classifiers =
  Programming Language :: Python :: 3.9

[options]
py_modules = aws_okta_processor
python_requires = >= 3.9

[flake8]
ignore = E203, W503, E402
max-line-length = 88